Fix spacing error

--- a/src/geiryn.View.css
+++ b/src/geiryn.View.css
@@ -180,7 +180,8 @@ body {
 }
 
 .geiryn-language-link {
-	padding-top: 4em;
+	padding-top: 2em;
+	padding-bottom: 2em;
 }
 
 @media screen and (orientation: portrait) and (max-width: 991px) {
